--- a/Animaniacs/src/main/res/layout/line_chart_activity.xml
+++ b/Animaniacs/src/main/res/layout/line_chart_activity.xml
@@ -4,9 +4,49 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <view
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:text="Run Data"
+        android:textSize="20dp"
+        android:gravity="center_horizontal"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:id="@+id/buttonRun"
+            android:text="Running"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="5dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:id="@+id/buttonJump"
+            android:text="Jumping"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:id="@+id/buttonFly"
+            android:text="Flying!"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="10dp"/>
+
+        </LinearLayout>
+
+    <view
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         class="djh.forfun.animaniacs.Views.LineChart"
         android:id="@+id/lineChart"
         android:background="#5e5e5e"
